[package]
name = "sosi"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Ngo Iok Ui <wusyong9104@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
fnv = "1.0"
# Use VarInt only, FixedInt is unsound.
integer-encoding = "2.1"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "cache"
harness = false
